--- a/internal/mailer/templates/token_password_reset.tmpl
+++ b/internal/mailer/templates/token_password_reset.tmpl
@@ -1,37 +1,47 @@
-{{define "subject"}}Reset your DialedIn Password{{end}}
+{{define "subject"}}Reset Your Dialed-In Password{{end}}
 
 {{define "plainBody"}}
-Hello!
+Hello {{.userName}},
 
-Please send a request to the `PUT /v1/users/password` endpoint with the following JSON body to set a new password:
+We received a request to reset your Dialed-In password.
 
-{"password": "your new password", "token": "{{.passwordResetToken}}"}
+Your one-time password reset token is:
 
-Please note that this is a one time use token and will expire in 45 minutes. If you need another token please submit another request
+{{.passwordResetToken}}
 
-Thank you!
+This token will expire in 45 minutes. If it expires or you didn’t request a reset, simply submit a new request or ignore this message.
 
+If you have any questions, feel free to reach out to us at dialedincafe@gmail.com.
+
+Thank you,
 The Dialed-In Team
 {{end}}
 
 {{define "htmlBody"}}
 <!doctype html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    </head>
+  <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  </head>
 
-    <body>
-        <p>Hello!</p>
-        <p>Please send a request to the <code>`PUT /v1/users/password`</code> endpoint with the following JSON body to set a new password:</p>
-        <pre><code>
-        {"password": "your new password", "token": "{{.passwordResetToken}}"}
-        </code></pre>
-        <p>Please note that this is a one time use token and will expire in 45 minutes. If you need another token please submit another request</p>
-        <p>Thank you!<p/>
-        <p>The Dialed-In Team</p>
-    </body>
+  <body>
+    <p>Hello {{.userName}},</p>
+
+    <p>We received a request to reset your Dialed-In password.</p>
+
+    <p>Your one-time password reset token is:</p>
+
+    <pre><code>{{.passwordResetToken}}</code></pre>
+
+    <p>This token will expire in 45 minutes. If it expires or you didn’t request a reset, simply submit a new request or ignore this message.</p>
+
+    <p>If you have any questions, feel free to reach out to us at <a href="mailto:dialedincafe@gmail.com">dialedincafe@gmail.com</a>.</p>
+
+    <p>Thank you,</p>
+    <p>The Dialed-In Team</p>
+  </body>
 </html>
 {{end}}
+
 
